run method takes message as input + reply method + demo on ReverserNumberog

--- a/examples/coflows/ogReverseNumberNotebook.ipynb
+++ b/examples/coflows/ogReverseNumberNotebook.ipynb
@@ -24,7 +24,16 @@
    "execution_count": 2,
    "id": "7352f95a-79da-4d94-a557-f39cc7544b4c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/nicolasbaldwin/opt/miniconda3/envs/coflows/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os, json\n",
     "\n",
@@ -74,7 +83,16 @@
    "execution_count": 5,
    "id": "e692a432-56b5-4040-8971-6f6246ab60e5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "started server on 0.0.0.0:11170\n",
+      "started server on 0.0.0.0:17415\n"
+     ]
+    }
+   ],
    "source": [
     "cl = colink_utils.start_colink_server()"
    ]
@@ -257,15 +275,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dispatch worker started in attached thread.\n",
-      "\n",
-      "~~~ Dispatch task ~~~\n",
-      "flow_type: ReverseNumberSequentialFlow_served\n",
-      "flow_id: 882b3caf-e425-4218-98ad-239542f83acf\n",
-      "message_ids: ['de491e76-b3ae-468c-9314-cea0a04598c5']\n",
-      "\n",
-      "Called ReverseNumberSequential\n",
-      "\n"
+      "Dispatch worker started in attached thread.\n"
      ]
     }
    ],
@@ -275,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "3d1a46cb-e4b5-434d-b718-f6338b713d16",
    "metadata": {},
    "outputs": [
@@ -283,23 +293,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dispatch worker started in attached thread.\n",
-      "\n",
-      "~~~ Dispatch task ~~~\n",
-      "flow_type: ReverseNumberAtomicFlow_served\n",
-      "flow_id: dbb911c8-e3f2-4441-9f43-5b899905b150\n",
-      "message_ids: ['876ba971-520e-4347-b096-0dfeecb6c944']\n",
-      "\n",
-      "Called ReverseNumberAtomic\n",
-      "\n",
-      "\n",
-      "~~~ Dispatch task ~~~\n",
-      "flow_type: ReverseNumberAtomicFlow_served\n",
-      "flow_id: f9af6ba5-b5b8-4b78-a93c-f148b665f2bd\n",
-      "message_ids: ['d26e9f48-d549-454f-9841-a5422bbf8502']\n",
-      "\n",
-      "Called ReverseNumberAtomic\n",
-      "\n"
+      "Dispatch worker started in attached thread.\n"
      ]
     }
    ],
@@ -317,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "56bf670c-3639-4ed3-bf6b-21b9fbd63015",
    "metadata": {},
    "outputs": [
@@ -325,9 +319,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mounted dbb911c8-e3f2-4441-9f43-5b899905b150 at flows:ReverseNumberAtomicFlow_served:mounts:local:dbb911c8-e3f2-4441-9f43-5b899905b150\n",
-      "Mounted f9af6ba5-b5b8-4b78-a93c-f148b665f2bd at flows:ReverseNumberAtomicFlow_served:mounts:local:f9af6ba5-b5b8-4b78-a93c-f148b665f2bd\n",
-      "Mounted 882b3caf-e425-4218-98ad-239542f83acf at flows:ReverseNumberSequentialFlow_served:mounts:local:882b3caf-e425-4218-98ad-239542f83acf\n"
+      "Mounted adca3e16-c97b-4f5b-a15c-0cdf4720bdaf at flows:ReverseNumberAtomicFlow_served:mounts:local:adca3e16-c97b-4f5b-a15c-0cdf4720bdaf\n",
+      "Mounted b0660839-9341-4cfa-b49c-10e641b5ba2f at flows:ReverseNumberAtomicFlow_served:mounts:local:b0660839-9341-4cfa-b49c-10e641b5ba2f\n",
+      "Mounted ea6b452b-420d-4531-a6e1-7531b1acbed4 at flows:ReverseNumberSequentialFlow_served:mounts:local:ea6b452b-420d-4531-a6e1-7531b1acbed4\n"
      ]
     }
    ],
@@ -363,6 +357,52 @@
      ]
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "~~~ Dispatch task ~~~\n",
+      "flow_type: ReverseNumberSequentialFlow_served\n",
+      "flow_id: ea6b452b-420d-4531-a6e1-7531b1acbed4\n",
+      "message_ids: ['5faf31f3-5a70-4919-8c52-244711990d59']\n",
+      "\n",
+      "Called ReverseNumberSequential \n",
+      " state {'current_call': 'first_reverse_flow'}\n",
+      "\n",
+      "~~~ Dispatch task ~~~\n",
+      "flow_type: ReverseNumberAtomicFlow_served\n",
+      "flow_id: adca3e16-c97b-4f5b-a15c-0cdf4720bdaf\n",
+      "message_ids: ['1d40d24d-e145-4585-8ebd-96b2c2087e3c']\n",
+      "\n",
+      "Called ReverseNumberAtomic \n",
+      " state {}\n",
+      "\n",
+      "~~~ Dispatch task ~~~\n",
+      "flow_type: ReverseNumberSequentialFlow_served\n",
+      "flow_id: ea6b452b-420d-4531-a6e1-7531b1acbed4\n",
+      "message_ids: ['913267c1-e940-4d5a-ac3d-fa688da51841']\n",
+      "\n",
+      "Called ReverseNumberSequential \n",
+      " state {'current_call': 'second_reverse_flow', 'initial_message': FlowMessage(message_id='25e8782d-d59f-4bee-bf26-36ae3dfee599', created_at='2024-03-08 12:50:10.516072000', created_by='Proxy_ReverseNumberSequentialFlow_served', message_type='FlowMessage', data={'id': 0, 'number': 81}, private_keys=[])}\n",
+      "\n",
+      "~~~ Dispatch task ~~~\n",
+      "flow_type: ReverseNumberAtomicFlow_served\n",
+      "flow_id: adca3e16-c97b-4f5b-a15c-0cdf4720bdaf\n",
+      "message_ids: ['3d3ad46a-d237-42ee-9ab1-2ec0b694c762']\n",
+      "\n",
+      "Called ReverseNumberAtomic \n",
+      " state {}\n",
+      "\n",
+      "~~~ Dispatch task ~~~\n",
+      "flow_type: ReverseNumberSequentialFlow_served\n",
+      "flow_id: ea6b452b-420d-4531-a6e1-7531b1acbed4\n",
+      "message_ids: ['9040e8f3-b4ba-4d72-8424-525400d68ddd']\n",
+      "\n",
+      "Called ReverseNumberSequential \n",
+      " state {'current_call': 'reply_to_message', 'initial_message': FlowMessage(message_id='25e8782d-d59f-4bee-bf26-36ae3dfee599', created_at='2024-03-08 12:50:10.516072000', created_by='Proxy_ReverseNumberSequentialFlow_served', message_type='FlowMessage', data={'id': 0, 'number': 81}, private_keys=[])}\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "{'output_number': 81}"
@@ -382,7 +422,6 @@
     "    data=input_data,\n",
     "    src_flow=\"Coflows team\",\n",
     "    dst_flow=flow,\n",
-    "    is_input_msg=True,\n",
     ")\n",
     "\n",
     "flow.ask(input_message).get_data()"
@@ -398,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "26f9a6d0-5188-444d-87cf-7d1fce214364",
    "metadata": {},
    "outputs": [
@@ -406,37 +445,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      " ReverseNumberSequentialFlow_served/\n",
+      "   default_config\n",
+      "   mounts/\n",
+      "     local/\n",
+      "       ea6b452b-420d-4531-a6e1-7531b1acbed4/\n",
+      "         init\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         config_overrides\n",
+      "   serve_mode\n",
+      "   default_dispatch_point\n",
+      "   init\n",
       " ReverseNumberAtomicFlow_served/\n",
       "   init\n",
-      "   serve_mode\n",
-      "   default_dispatch_point\n",
       "   default_config\n",
-      "   mounts/\n",
-      "     local/\n",
-      "       dbb911c8-e3f2-4441-9f43-5b899905b150/\n",
-      "         state\n",
-      "         config_overrides\n",
-      "         init\n",
-      "       f9af6ba5-b5b8-4b78-a93c-f148b665f2bd/\n",
-      "         init\n",
-      "         config_overrides\n",
-      "         state\n",
-      " ReverseNumberSequentialFlow_served/\n",
-      "   serve_mode\n",
-      "   default_config\n",
-      "   init\n",
       "   default_dispatch_point\n",
       "   mounts/\n",
       "     local/\n",
-      "       882b3caf-e425-4218-98ad-239542f83acf/\n",
+      "       b0660839-9341-4cfa-b49c-10e641b5ba2f/\n",
       "         config_overrides\n",
-      "         state\n",
       "         init\n",
+      "       adca3e16-c97b-4f5b-a15c-0cdf4720bdaf/\n",
+      "         init\n",
+      "         config_overrides\n",
+      "   serve_mode\n",
       "\n",
       "Live flow instances:\n",
-      " dbb911c8-e3f2-4441-9f43-5b899905b150\n",
-      " f9af6ba5-b5b8-4b78-a93c-f148b665f2bd\n",
-      " 882b3caf-e425-4218-98ad-239542f83acf\n"
+      " adca3e16-c97b-4f5b-a15c-0cdf4720bdaf\n",
+      " b0660839-9341-4cfa-b49c-10e641b5ba2f\n",
+      " ea6b452b-420d-4531-a6e1-7531b1acbed4\n"
      ]
     }
    ],
@@ -660,7 +702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
