fixed pip dependencies + begining of AMLD

--- a/AMLD/ReverseNumber/ReverseNumber.ipynb
+++ b/AMLD/ReverseNumber/ReverseNumber.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -49,18 +40,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "started server on 0.0.0.0:12832\n",
-      "started server on 0.0.0.0:11400\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cl = colink_utils.start_colink_server()"
    ]
@@ -81,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,27 +144,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Started serving at flows:ReverseNumberAtomicFlow_served.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "serve_utils.serve_flow(\n",
     "    cl=cl,\n",
@@ -203,18 +167,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dispatch worker started in attached thread.\n",
-      "Mounted b4dabce5-2225-4b49-86fa-d8c5df7f4c18 at flows:ReverseNumberAtomicFlow_served:mounts:local:b4dabce5-2225-4b49-86fa-d8c5df7f4c18\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Start a worker thread to handle incoming messages\n",
     "run_dispatch_worker_thread(cl, dispatch_point=\"coflows_dispatch\", flow_modules_base_path=FLOW_MODULES_PATH)\n",
@@ -239,40 +194,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "~~~ Dispatch task ~~~\n",
-      "flow_type: ReverseNumberAtomicFlow_served\n",
-      "flow_id: b4dabce5-2225-4b49-86fa-d8c5df7f4c18\n",
-      "message_ids: ['a0c8d313-6103-4f07-9532-c6a6713849ba']\n",
-      "\n",
-      "\n",
-      "~~~ Dispatch task ~~~\n",
-      "flow_type: ReverseNumberSequentialFlow\n",
-      "flow_id: 959c998e-d42b-4e8d-9a16-37e53e03b3e8\n",
-      "message_ids: ['f5849529-0f35-4edf-99f6-056deea4543f']\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data sent:\n",
-      " {'id': 0, 'number': 12345} \n",
-      "\n",
-      "REPLY:\n",
-      " {'reversed_number': '54321'} \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_data = {\"id\": 0, \"number\": 12345}\n",
     "\n",
@@ -317,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +307,7 @@
     "            message = self.input_interface_second_reverse_flow(input_message)\n",
     "            \n",
     "            #TODO: Call the second flow and requests a reply to be sent back to the input queue\n",
-    "            self.subflows[\"second_reverse_flow\"].???\n",
+    "            self.subflows[\"second_reverse_flow\"].\n",
     "        \n",
     "        #Case where we need to reply to the initial message (we've already reversed the number twice)\n",
     "        else:\n",
@@ -405,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,27 +379,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Started serving at flows:ReverseNumberSequentialFlow.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "serve_utils.serve_flow(\n",
     "    cl=cl,\n",
@@ -496,20 +402,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dispatch worker started in attached thread.\n",
-      "Mounted 312ca7ce-38c5-4508-ae0f-f2ba47aae35b at flows:ReverseNumberAtomicFlow_served:mounts:local:312ca7ce-38c5-4508-ae0f-f2ba47aae35b\n",
-      "Mounted 5fb6d82f-2b3d-433a-934f-919ee272db6f at flows:ReverseNumberAtomicFlow_served:mounts:local:5fb6d82f-2b3d-433a-934f-919ee272db6f\n",
-      "Mounted 959c998e-d42b-4e8d-9a16-37e53e03b3e8 at flows:ReverseNumberSequentialFlow:mounts:local:959c998e-d42b-4e8d-9a16-37e53e03b3e8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Start a worker thread to handle incoming messages\n",
     "run_dispatch_worker_thread(cl, dispatch_point=\"coflows_dispatch\", flow_modules_base_path=FLOW_MODULES_PATH)\n",
@@ -534,58 +429,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "~~~ Dispatch task ~~~\n",
-      "flow_type: ReverseNumberAtomicFlow_served\n",
-      "flow_id: 312ca7ce-38c5-4508-ae0f-f2ba47aae35b\n",
-      "message_ids: ['fbc7e2c7-75ad-4d9e-89bb-124db0a7ecca']\n",
-      "\n",
-      "\n",
-      "~~~ Dispatch task ~~~\n",
-      "flow_type: ReverseNumberAtomicFlow_served\n",
-      "flow_id: 5fb6d82f-2b3d-433a-934f-919ee272db6f\n",
-      "message_ids: ['bca16030-f3ef-428e-9e29-850ff80105dc']\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "~~~ Dispatch task ~~~\n",
-      "flow_type: ReverseNumberSequentialFlow\n",
-      "flow_id: 959c998e-d42b-4e8d-9a16-37e53e03b3e8\n",
-      "message_ids: ['ad19caaa-0da5-4569-91a3-fe80bb0870a1']\n",
-      "\n",
-      "\n",
-      "~~~ Dispatch task ~~~\n",
-      "flow_type: ReverseNumberSequentialFlow\n",
-      "flow_id: 959c998e-d42b-4e8d-9a16-37e53e03b3e8\n",
-      "message_ids: ['27f94771-e045-499e-8db3-38a527ada996']\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data sent:\n",
-      " {'id': 0, 'number': 12345} \n",
-      "\n",
-      "REPLY:\n",
-      " {'output_number': '12345'} \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_data = {\"id\": 0, \"number\": 12345}\n",
     "\n",
@@ -637,7 +483,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
