slight fix in notebook

--- a/AMLD/ReverseNumber/ReverseNumber.ipynb
+++ b/AMLD/ReverseNumber/ReverseNumber.ipynb
@@ -19,7 +19,6 @@
     "from aiflows.utils.general_helpers import read_yaml_file\n",
     "from aiflows.utils import serve_utils\n",
     "from aiflows.utils import colink_utils\n",
-    "from aiflows.utils.colink_utils import start_colink_server\n",
     "from aiflows.workers import run_dispatch_worker_thread\n",
     "from aiflows.base_flows import AtomicFlow\n",
     "from aiflows.messages import FlowMessage\n",
@@ -178,7 +177,7 @@
     "proxy_reverse_number_flow = serve_utils.recursive_mount(\n",
     "    cl=cl,\n",
     "    client_id=\"local\",\n",
-    "    flow_type=\"ReverseNumberAtomicFlow_served\", #???\n",
+    "    flow_type=\"ReverseNumberAtomicFlow_served\", \n",
     "    config_overrides=None,\n",
     "    initial_state=None,\n",
     "    dispatch_point_override=None,\n",
@@ -307,7 +306,7 @@
     "            message = self.input_interface_second_reverse_flow(input_message)\n",
     "            \n",
     "            #TODO: Call the second flow and requests a reply to be sent back to the input queue\n",
-    "            self.subflows[\"second_reverse_flow\"].\n",
+    "            self.subflows[\"second_reverse_flow\"].???\n",
     "        \n",
     "        #Case where we need to reply to the initial message (we've already reversed the number twice)\n",
     "        else:\n",
@@ -413,7 +412,7 @@
     "proxy_reverse_number_sequential_flow = serve_utils.recursive_mount(\n",
     "    cl=cl,\n",
     "    client_id=\"local\",\n",
-    "    flow_type=\"ReverseNumberSequentialFlow\", #???\n",
+    "    flow_type=\"ReverseNumberSequentialFlow\",\n",
     "    config_overrides=None,\n",
     "    initial_state=None,\n",
     "    dispatch_point_override=None,\n",
