--- a/examples/mauro_examples/ReverseNumber - multi user/ReverseNumber-multiuser.ipynb
+++ b/examples/mauro_examples/ReverseNumber - multi user/ReverseNumber-multiuser.ipynb
@@ -80,16 +80,16 @@
      "text": [
       "Dispatch worker started in attached thread.\n",
       "dispatch_point: coflows_dispatch\n",
-      "Mount worker started in attached thread for user  0376adb05025f8c77acc10ce58102ec21be9a5e14a70a51261860ca64fa4dda602\n",
+      "Mount worker started in attached thread for user  031b8e88ace090e76b53fba7592db6794bf5f1986a7333f2593953d76a25fa4569\n",
       "\n",
       "~~~ Mount Receiver Task ~~~\n",
-      "Mounted ce535836-37d1-4ebd-9fc5-bc14d325e10f at flows:reverse_number_atomic:mounts:033d08f436a4ef1bdf271e85073e8d3127b328889a012f061545ca27fd79aecba0:ce535836-37d1-4ebd-9fc5-bc14d325e10f\n",
-      "Mounted 82edc4e7-0946-401d-9ed8-87d370f9cac7 at flows:reverse_number_atomic:mounts:033d08f436a4ef1bdf271e85073e8d3127b328889a012f061545ca27fd79aecba0:82edc4e7-0946-401d-9ed8-87d370f9cac7\n",
+      "Mounted ba795f1d-7dc2-4ebe-92e6-f8eec199a7d8 at flows:reverse_number_atomic:mounts:03e413e35ab76a1e3a51476d44069f3c85bb86791a039b99d177002fef05af3f3f:ba795f1d-7dc2-4ebe-92e6-f8eec199a7d8\n",
+      "Mounted 9ff2e700-b765-464b-94db-16b02f849674 at flows:reverse_number_atomic:mounts:03e413e35ab76a1e3a51476d44069f3c85bb86791a039b99d177002fef05af3f3f:9ff2e700-b765-464b-94db-16b02f849674\n",
       "\n",
       "~~~ Dispatch task ~~~\n",
       "flow_type: reverse_number_atomic\n",
-      "flow_id: ce535836-37d1-4ebd-9fc5-bc14d325e10f\n",
-      "message_paths: ['push_tasks:9179acda-cf5d-4c3b-8080-b87c7e17e126:msg']\n",
+      "flow_id: ba795f1d-7dc2-4ebe-92e6-f8eec199a7d8\n",
+      "message_paths: ['push_tasks:32083741-fb3f-4f5b-b571-982ba2b4bf0d:msg']\n",
       "parallel_dispatch: False\n",
       "\n",
       "Called ReverseNumberAtomic \n",
@@ -97,8 +97,8 @@
       "\n",
       "~~~ Dispatch task ~~~\n",
       "flow_type: reverse_number_atomic\n",
-      "flow_id: ce535836-37d1-4ebd-9fc5-bc14d325e10f\n",
-      "message_paths: ['push_tasks:b6aae067-b337-4c4b-bd4d-aac682449003:msg']\n",
+      "flow_id: ba795f1d-7dc2-4ebe-92e6-f8eec199a7d8\n",
+      "message_paths: ['push_tasks:dde75642-0290-4ce7-be9c-1003cbd82f03:msg']\n",
       "parallel_dispatch: False\n",
       "\n",
       "Called ReverseNumberAtomic \n",
@@ -143,7 +143,7 @@
     "    cl=cls[0],\n",
     "    flow_class_name=\"ReverseNumberFlowModule.ReverseNumberAtomicFlow\",\n",
     "    flow_endpoint=\"reverse_number_atomic\",\n",
-    "    singleton=False,\n",
+    "    singleton=True,\n",
     ")"
    ]
   },
@@ -167,14 +167,18 @@
      "text": [
       "Dispatch worker started in attached thread.\n",
       "dispatch_point: coflows_dispatch\n",
-      "Mount worker started in attached thread for user  033d08f436a4ef1bdf271e85073e8d3127b328889a012f061545ca27fd79aecba0\n",
+      "Mount worker started in attached thread for user  03e413e35ab76a1e3a51476d44069f3c85bb86791a039b99d177002fef05af3f3f\n",
       "\n",
       "~~~ Mount Initiator Task ~~~\n",
+      "Received subflow ids: {\n",
+      "    \"first_reverse_flow\": \"ba795f1d-7dc2-4ebe-92e6-f8eec199a7d8\",\n",
+      "    \"second_reverse_flow\": \"9ff2e700-b765-464b-94db-16b02f849674\"\n",
+      "}\n",
       "\n",
       "~~~ Dispatch task ~~~\n",
       "flow_type: reverse_number_sequential\n",
-      "flow_id: a32d1f28-0d24-4cb5-80ba-6cc85c1d5d3c\n",
-      "message_paths: ['push_tasks:b7ac19c4-0568-4b4d-86d6-be6de00a9200:msg']\n",
+      "flow_id: 141f344e-14ad-4430-8d50-50f8b82c9b05\n",
+      "message_paths: ['push_tasks:b630e5f2-8cf6-4793-a307-5ac4340543bc:msg']\n",
       "parallel_dispatch: False\n",
       "\n",
       "Called ReverseNumberSequential \n",
@@ -182,21 +186,21 @@
       "\n",
       "~~~ Dispatch task ~~~\n",
       "flow_type: reverse_number_sequential\n",
-      "flow_id: a32d1f28-0d24-4cb5-80ba-6cc85c1d5d3c\n",
-      "message_paths: ['push_tasks:9e437c27-9634-4e5b-8744-7b9e2202a506:msg']\n",
+      "flow_id: 141f344e-14ad-4430-8d50-50f8b82c9b05\n",
+      "message_paths: ['push_tasks:67fde906-7bc3-450b-b830-9b2a9d112ceb:msg']\n",
       "parallel_dispatch: False\n",
       "\n",
       "Called ReverseNumberSequential \n",
-      " state {'current_call': 'second_reverse_flow', 'initial_message': FlowMessage(message_id='9c1d1571-2b8c-442f-8651-285bce38809e', created_at='2024-03-16 03:50:34.235967593', created_by='Proxy_reverse_number_sequential', message_type='FlowMessage', data={'id': 0, 'number': 1234}, private_keys=[])}\n",
+      " state {'current_call': 'second_reverse_flow', 'initial_message': FlowMessage(message_id='a88484d9-ed4e-4b5b-bf8b-5b7bcf8c2195', created_at='2024-03-16 03:58:33.764980097', created_by='Proxy_reverse_number_sequential', message_type='FlowMessage', data={'id': 0, 'number': 1234}, private_keys=[])}\n",
       "\n",
       "~~~ Dispatch task ~~~\n",
       "flow_type: reverse_number_sequential\n",
-      "flow_id: a32d1f28-0d24-4cb5-80ba-6cc85c1d5d3c\n",
-      "message_paths: ['push_tasks:a4181a56-9cc2-4f93-a2d8-8a195269db57:msg']\n",
+      "flow_id: 141f344e-14ad-4430-8d50-50f8b82c9b05\n",
+      "message_paths: ['push_tasks:3393ffdb-f05a-404b-a5ac-0ebec6badbb2:msg']\n",
       "parallel_dispatch: False\n",
       "\n",
       "Called ReverseNumberSequential \n",
-      " state {'current_call': 'reply_to_message', 'initial_message': FlowMessage(message_id='9c1d1571-2b8c-442f-8651-285bce38809e', created_at='2024-03-16 03:50:34.235967593', created_by='Proxy_reverse_number_sequential', message_type='FlowMessage', data={'id': 0, 'number': 1234}, private_keys=[])}\n"
+      " state {'current_call': 'reply_to_message', 'initial_message': FlowMessage(message_id='a88484d9-ed4e-4b5b-bf8b-5b7bcf8c2195', created_at='2024-03-16 03:58:33.764980097', created_by='Proxy_reverse_number_sequential', message_type='FlowMessage', data={'id': 0, 'number': 1234}, private_keys=[])}\n"
      ]
     }
    ],
@@ -250,7 +254,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mounted a32d1f28-0d24-4cb5-80ba-6cc85c1d5d3c at flows:reverse_number_sequential:mounts:local:a32d1f28-0d24-4cb5-80ba-6cc85c1d5d3c\n"
+      "Mounted 141f344e-14ad-4430-8d50-50f8b82c9b05 at flows:reverse_number_sequential:mounts:local:141f344e-14ad-4430-8d50-50f8b82c9b05\n"
      ]
     }
    ],
@@ -328,24 +332,24 @@
      "output_type": "stream",
      "text": [
       " reverse_number_atomic/\n",
-      "   flow_class_name\n",
-      "   singleton\n",
-      "   init\n",
       "   default_dispatch_point\n",
+      "   init\n",
+      "   singleton\n",
       "   parallel_dispatch\n",
+      "   flow_class_name\n",
       "   mounts/\n",
-      "     033d08f436a4ef1bdf271e85073e8d3127b328889a012f061545ca27fd79aecba0/\n",
-      "       ce535836-37d1-4ebd-9fc5-bc14d325e10f/\n",
+      "     03e413e35ab76a1e3a51476d44069f3c85bb86791a039b99d177002fef05af3f3f/\n",
+      "       9ff2e700-b765-464b-94db-16b02f849674/\n",
+      "         init\n",
       "         config_overrides\n",
+      "       ba795f1d-7dc2-4ebe-92e6-f8eec199a7d8/\n",
+      "         init\n",
       "         state\n",
-      "         init\n",
-      "       82edc4e7-0946-401d-9ed8-87d370f9cac7/\n",
-      "         init\n",
       "         config_overrides\n",
       "\n",
       "All flow instances:\n",
-      " ce535836-37d1-4ebd-9fc5-bc14d325e10f\n",
-      " 82edc4e7-0946-401d-9ed8-87d370f9cac7\n"
+      " ba795f1d-7dc2-4ebe-92e6-f8eec199a7d8\n",
+      " 9ff2e700-b765-464b-94db-16b02f849674\n"
      ]
     }
    ],
@@ -364,20 +368,20 @@
      "output_type": "stream",
      "text": [
       " reverse_number_sequential/\n",
-      "   init\n",
-      "   singleton\n",
-      "   default_dispatch_point\n",
       "   parallel_dispatch\n",
+      "   default_dispatch_point\n",
+      "   init\n",
       "   flow_class_name\n",
+      "   singleton\n",
       "   mounts/\n",
       "     local/\n",
-      "       a32d1f28-0d24-4cb5-80ba-6cc85c1d5d3c/\n",
-      "         config_overrides\n",
+      "       141f344e-14ad-4430-8d50-50f8b82c9b05/\n",
       "         state\n",
       "         init\n",
+      "         config_overrides\n",
       "\n",
       "All flow instances:\n",
-      " a32d1f28-0d24-4cb5-80ba-6cc85c1d5d3c\n"
+      " 141f344e-14ad-4430-8d50-50f8b82c9b05\n"
      ]
     }
    ],
